force-app/main/default/objects/TPM_FieldsMapping__mdt/TPM_FieldsMapping__mdt.object-meta.xml
<CustomObject>
    <label>Field Mapping</label>
    <pluralLabel>Fields Mapping</pluralLabel>
</CustomObject>