force-app/main/default/objects/TPM_FieldsMapping__mdt/fields/Lookup_Relationship_Notation__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Relationship_Notation__c</fullName>
    <description>If &apos;Is Lookup&apos; checked, then give the relationship field notation.</description>
    <inlineHelpText>Example : Put Id (field API name) as value for Account.Id
Note : Relationship field should be included in SOQL</inlineHelpText>
    <label>Lookup Relationship Notation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>