force-app/main/default/objects/TPM_FieldsMapping__mdt/fields/TPM_Condition__c.field-meta.xml
<CustomField>
    <fullName>TPM_Condition__c</fullName>
    <label>Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>