force-app/main/default/objects/TPM_FieldsMapping__mdt/fields/TPM_ConditionCriteria__c.field-meta.xml
<CustomField>
    <fullName>TPM_ConditionCriteria__c</fullName>
    <label>Condition Criteria</label>
    <length>10</length>
    <type>Text</type>
</CustomField>