force-app/main/default/objects/TPM_FieldsMapping__mdt/fields/TPM_DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>TPM_DefaultValue__c</fullName>
    <label>Default Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>