force-app/main/default/objects/TPM_FieldsMapping__mdt/fields/TPM_FromFieldApi__c.field-meta.xml
<CustomField>
    <fullName>TPM_FromFieldApi__c</fullName>
    <label>From Field Api</label>
    <length>100</length>
    <type>Text</type>
</CustomField>