force-app/main/default/objects/TPM_FieldsMapping__mdt/fields/TPM_IsLookup__c.field-meta.xml
<CustomField>
    <fullName>TPM_IsLookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Assign SF_IDs for these fields</description>
    <label>Is Lookup</label>
    <type>Checkbox</type>
</CustomField>