force-app/main/default/objects/TPM_FieldsMapping__mdt/fields/TPM_ProcessName__c.field-meta.xml
<CustomField>
    <fullName>TPM_ProcessName__c</fullName>
    <label>Process Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>