force-app/main/default/objects/TPM_FieldsMapping__mdt/fields/TPM_ToFieldApi__c.field-meta.xml
<CustomField>
    <fullName>TPM_ToFieldApi__c</fullName>
    <label>To Field Api</label>
    <length>100</length>
    <type>Text</type>
</CustomField>