force-app/main/default/objects/TPM_FieldsMapping__mdt/fields/TPM_UseDefaultValue__c.field-meta.xml
<CustomField>
    <fullName>TPM_UseDefaultValue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Default Value</label>
    <type>Checkbox</type>
</CustomField>