force-app/main/default/objects/TPM_FieldsMapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>TPM_ProcessName__c</columns>
    <columns>TPM_ToFieldApi__c</columns>
    <columns>TPM_FromFieldApi__c</columns>
    <columns>TPM_IsLookup__c</columns>
    <columns>Lookup_Relationship_Notation__c</columns>
    <columns>TPM_Condition__c</columns>
    <columns>TPM_ConditionCriteria__c</columns>
    <columns>TPM_DefaultValue__c</columns>
    <columns>TPM_UseDefaultValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>